Changes in version 1.3.4-9001 ( Release date: )
==============
Changes:
* default in `makeDendrogram` is now `dimReduce="mad"` to avoid accidentally calling it with `dimReduce="none"` (previous default), and killing machine.

Changes in version 1.3.4 ( Release date: 2017-09-28)
==============
Changes:
* Add argument `clusterLabels` to `plotClusters` to allow user to set clusterLabels without changing the object.
* Added data object of run of RSEC. Changed `lazyLoad` to `false` because loading this object on installation was creating errors. 
* Updated vignette to more completely cover RSEC.
* Change default `clusterFunction` argument to `RSEC` to be "hierarchical01" rather than all 01 methods (previous default). This reduces load of making simple call.
* Updated validity checks to reduce memory load, and dropped `validObject` calls.
* Added function `getClusterManyParams` to parse the parameter values in the clusterLabels from clusterMany
* Removed old dependency on diagram (from previous vignette, no longer needed)

Bugs:
* Fixed error in subsetting of clusterExperiment object when dendrogram is attached (previously didn't reset dendro_outbranch to NA)

Changes in version 1.3.3 ( Release date: 2017-09-07)
==============
Changes:
* Bug fix in clusterContrasts -- missing `match.arg` option for `outputType` argument

Changes in version 1.3.2 ( Release date: 2017-07-05)
==============
Changes:
* Default for `top.can` in seqCluster are changed to be `top.can=5`.
* makeDendrogram now has the default argument `ignoreUnassignedVar=TRUE` like in RSEC