@@ -62,6 +62,7 @@ exportMethods(orderSamples)
 exportMethods(plotBarplot)
 exportMethods(plotClusters)
 exportMethods(plotCoClustering)
+exportMethods(plotContrastHeatmap)
 exportMethods(plotDendrogram)
 exportMethods(plotHeatmap)
 exportMethods(primaryCluster)
