@@ -2,6 +2,8 @@ Changes in version 1.3.4-9001 ( Release date: )
 ==============
 Changes:
 * default in `makeDendrogram` is now `dimReduce="mad"` to avoid accidentally calling it with `dimReduce="none"` (previous default), and killing machine.
+* Add `plotContrastHeatmap` to plot the significant genes that are result of getBestFeatures
+* Change default in `plotHeatmap` to `clusterSamplesData="dendrogramValue"`.
 
 Changes in version 1.3.4 ( Release date: 2017-09-28)
 ==============
